/* Long comment kinda
 * multiple lines actually */
edition = "2023";

package crabs.sponge_bob;

message BetsyKrabsProto {}
