edition = "2023";

package crabs.sponge_bob;

message MrKrabs {
  string state = 1;
}

